src/test/ui/span/issue-23827.stderr
error[E0046]: not all trait items implemented, missing: `Output`
  --> $DIR/issue-23827.rs:36:1
   |
36 | / impl<C: Component> FnOnce<(C,)> for Prototype {
37 | |     //~^ ERROR E0046
38 | |     //~| NOTE missing `Output` in implementation
39 | |     //~| NOTE `Output` from trait: `type Output;`
...  |
42 | |     }
43 | | }
   | |_^ missing `Output` in implementation
   |
   = note: `Output` from trait: `type Output;`

error: aborting due to previous error

